adding all endpoints to swagger
